--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -18,10 +18,10 @@ ExecStart=gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --erro
 Restart=always
 
 #Redirect ST/IO to syslog
-StandardOutput=append:/tmp/airbnb-access.log
+StandardOutput=file:/tmp/airbnb-access.log
 
 #redirect astandard errror ro syslog
-StandardError=append:/tmp/airbnb-error.log
+StandardError=file:/tmp/airbnb-error.log
 
 #identifier for syslog messages
 SyslogIdentifier=gunicorn
