--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -7,12 +7,21 @@ After=network.target
 [Service]
 #run the service under a user
 User=ubuntu
+Group=ubuntu
+
+ExecStartPre = /bin/mkdir /run/hbnb
+ExecStartPre = /bin/chown -R ubuntu:ubuntu /run/hbnb
 
 #working directory to set
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
 
 #The Gunicorn process should spawn 3 worker processes
 ExecStart=gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --error-logfile /tmp/airbnb-error.log
+
+ExecReload = /bin/kill -s HUP $MAINPID
+ExecStop = /bin/kill -s TERM $MAINPID
+ExecStopPost = /bin/rm -rf /run/hbnb
+PrivateTmp = false 
 
 #restart service if fails
 Restart=always
